tests/snapshots/sfc/js/options_api__keep_alive_wrapping_dynamic_component.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  data() {
    return { view: 'home' }
  }
}

import { resolveDynamicComponent as _resolveDynamicComponent, openBlock as _openBlock, createBlock as _createBlock, KeepAlive as _KeepAlive } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createBlock(_KeepAlive, null, [
    (_openBlock(), _createBlock(_resolveDynamicComponent(_ctx.view)))
  ], 1024 /* DYNAMIC_SLOTS */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
