tests/snapshots/sfc/js/options_api__method_called_in_interpolation.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  data() {
    return { name: 'world' }
  },
  methods: {
    greet(who) {
      return 'Hello, ' + who
    }
  }
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString($options.greet($data.name)), 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
