tests/snapshots/sfc/js/options_api__mixins.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.local) + " " + _toDisplayString(_ctx.sharedValue), 1 /* TEXT */))
}

import { loggerMixin } from './mixins.js'

const _sfc_main = {
  mixins: [loggerMixin],
  data() {
    return { local: 1 }
  }
}

_sfc_main.render = _sfc_render
export default _sfc_main
