tests/snapshots/sfc/js/options_api__named_and_scoped_slots_in_child.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

import Layout from './Layout.vue'

const _sfc_main = {
  components: { Layout },
  data() {
    return { items: ['a', 'b'] }
  }
}

import { resolveComponent as _resolveComponent, toDisplayString as _toDisplayString, createElementVNode as _createElementVNode, openBlock as _openBlock, createBlock as _createBlock, withCtx as _withCtx } from "vue"

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("h1", null, "Title")

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_Layout = _resolveComponent("Layout")
  
  return (_openBlock(), _createBlock(_component_Layout, null, {
    header: _withCtx(() => [
      _hoisted_1
    ]),
    default: _withCtx(({ item }) => [
      _createElementVNode("span", null, _toDisplayString(item), 1 /* TEXT */)
    ]),
    _: 1 /* STABLE */
  }))
}
_sfc_main.render = _sfc_render
export default _sfc_main
