tests/snapshots/sfc/js/options_api__props_array_form.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  props: ['title', 'count']
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString($props.title) + ": " + _toDisplayString($props.count), 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
